[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menus/DirtSpawner.gd" type="Script" id=1]

[node name="DirtSpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="DirtSpawnPoint" type="Position2D" parent="."]

[node name="FireDirection" type="Position2D" parent="."]
position = Vector2( 0, -4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
